# aftzaak

./: Cargo.toml  generate-entity.sh
migration/: Cargo.toml
migration/src/: lib.rs  m20260702_130849_create_user_table.rs  m20260702_134432_create_item_table.rs  m20260702_134555_create_facet_table.rs  m20260702_134932_create_item_table.rs  m20260702_135010_create_item_facet_value_table.rs  m20260702_234555_create_user_oidc_id_table.rs  m20260720_144717_create_role_table.rs  m20260720_144727_create_user_role_table.rs
src/: api.rs  config.rs  error.rs  main.rs  middleware.rs  tokensigner.rs  util.rs
src/api/: v1.rs
src/api/v1/: admin.rs  auth.rs  facet.rs  item.rs
src/entity/: facet.rs  item.rs  item_facet_value.rs  mod.rs  prelude.rs  role.rs  user.rs  user_oidc_id.rs  user_role.rs
src/middleware/: tokenauth.rs
src/types/: api.rs
src/types/api/: auth.rs  facet.rs  item.rs
src/util/: tokensigner.rs
