[package]
name = "aftzaak"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["migration"]

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.8.9", features = ["multipart", "macros"] }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
sonic-rs = "0.5.8"
#sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sea-orm = { git = "https://github.com/SeaQL/sea-orm.git", rev = "aa3624617991fdb76645fbf0935ab7de491c2ba2", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
anyhow = "1.0.103"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
