[package]
edition      = "2024"
name         = "migration"
publish      = false
rust-version = "1.85.0"
version      = "0.1.0"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
sea-schema = "0.18.1"

[dependencies.sea-orm-migration]
features = [
    "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
    "sqlx-postgres",         # `DATABASE_DRIVER` feature
]
#version = "2.0.0-rc"
git = "https://github.com/SeaQL/sea-orm.git"
rev = "aa3624617991fdb76645fbf0935ab7de491c2ba2"
